--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,24 @@
-# Node modules
-node_modules/
-
-# Build output
-dist/
-.vite/
-
 # Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Environment variables
-.env
-.env.*
+node_modules
+dist
+dist-ssr
+*.local
 
-# IDE/editor settings
-.vscode/
-.idea/
-
-# OS-specific files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# TypeScript build info
-*.tsbuildinfo
-
-# Rollup visualizer output (if used)
-stats.html
-
-# ESLint cache
-.eslintcache
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
